--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
               <div class="header__left">
                   <h1>Work on your Skills to advance in your career</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem rem vitae officiis est nesciunt laborum excepturi totam odio impedit
-                    laudantium nemo, temporibus suscipit, culpa deserunt earum ea odio. Nisi, ecusandae commodi porro, magni assumenda labore.
+                   Are you standing at a crossroads, unsure which career path to take? Let us be your guide on this excitin
+                    g journey of self-discovery and career exploration. Choosing a career is more than just finding a job;
+                    it's about finding your purpose, passion, and true potential.
                 </p>
                 <a href="courses.html" class="btn btn-primary">Get Started</a>
               </div>
