--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
               <div class="categories__left">
                 <h1>Categories</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem rem vitae officiis est nesciunt laborum excepturi totam odio impedit
-                    laudantium nemo, temporibus suscipit, culpa deserunt earum ea odio. Nisi, ecusandae commodi porro, magni assumenda labore.
+                   At the heart of every individual lies untapped potential and a unique set of skills waiting to be unleashed. 
+                    Welcome to a world of diverse career choices, where you can find the perfect match for your passions 
+                    and aspirations. Embrace the excitement of discovering your true calling among these captivating career categories:
                 </p>
                 <a href="#" class="btn">Learn More</a>
               </div>
@@ -78,14 +79,16 @@
                     </span>
                     <h5>Web/Desktop Application</h5>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        As a front-end developer, you'll breathe life into websites
+                        and applications using HTML, CSS, and JavaScript.
                     </p>
                 </article>
                 <article class="category">
                     <span class="category__icon uil uil-bitcoin"></span>
                     <h5>Web Design/Development</h5>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Step into the realm of boundless creativity and technical prowess,
+                        where imagination comes to life on the digital canvas. 
                     </p>
                 </article>
                 <article class="category">
@@ -94,7 +97,9 @@
                     </span>
                     <h5>Mobile Application</h5>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Welcome to the exciting world of mobile application development, 
+                        where innovation and creativity come together to shape the way we live, 
+                        work, and connect. 
                     </p>
                 </article>
                 <article class="category">
@@ -103,7 +108,8 @@
                     </span>
                     <h5>UI/UX Design</h5>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                        Infuse interfaces with stunning visuals, creating 
+                        designs that evoke emotions and convey brand messages.
                     </p>
                 </article>
                 <article class="category">
@@ -112,7 +118,8 @@
                     </span>
                     <h5>Graphic Design</h5>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                         As a graphic designer, you wield the power to communicate messages,
+                        evoke emotions, and shape perceptions through captivating artistry.
                     </p>
                 </article>
                 <article class="category">
@@ -121,7 +128,7 @@
                     </span>
                     <h5>Finance</h5>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                       Financial management is the cornerstone of a successful and fulfilling life. 
                     </p>
                 </article>
               </div>
@@ -139,7 +146,7 @@
                   <div class="course__info">
                     <h4>Fully Responsive Social Media Website UI Design</h4>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       You'll be able to create a visually stunning and user-friendly platform that unites people from all walks of life.
                     </p>
                     <a href="courses.html" class="btn btn-primary">Learn More</a>   
                   </div>
