--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                 <div class="course__info">
                     <h4>Mobile and Desktop Application UI Design</h4>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                        Mobile and desktop application UI design are critical aspects of creating user-friendly and visually
+                        appealing software. With some fundamental principles and best practices for both platforms you are good to go:
                     </p>
                 <a href="courses.html" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -170,7 +171,9 @@
                 <div class="course__info">
                     <h4>Responsive E-commerce Website Design</h4>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                        Responsive e-commerce website design is crucial for providing an optimal
+                        shopping experience across different devices, including desktops, laptops, 
+                        tablets, and smartphones. 
                     </p>
                 <a href="courses.html" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -186,9 +189,9 @@
                 <div class="faq__icon"><i class="uil uil-plus"></i></div>
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                    <p>                       
+                        Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -198,8 +201,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                        Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -209,8 +212,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                       Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -220,8 +223,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                        Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -231,8 +234,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                        Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -242,8 +245,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                      Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -253,8 +256,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                         Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -264,8 +267,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                       Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -274,8 +277,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                       Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -285,8 +288,8 @@
                 <div class="question__answer">
                     <h4>How do I know the course to register for?</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rem repellendus aut ad obcaecati molestias eius quasi expedita placeat. Odio nostrum asperiores architecto distinctio sequi nisi ex aut. Explicabo vel natus mollitia quisquam sed asperiores officia nobis exercitationem ipsa nemo, facilis 
-                        voluptatum repellendus voluptate provident sequi aliquid, fugiat vitae perferendis?
+                        Choosing the right course to register for depends on your interests, career goals, educational background, and the specific skills or
+                        knowledge you want to acquire. We are going to provide you with some steps to help you decide which course is the best fit for you:
                     </p>
                 </div>
             </article>
@@ -308,8 +311,9 @@
                   </div>
                   <div class="testimonial__body">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. At,
-                         ullam aperiam earum beatae facilis.
+                        Taking the Web Development Fundamentals course has been an incredible journey for me.
+                        As someone with limited coding experience, I was initially hesitant about diving into the
+                        world of web development. However, this course provided the perfect introduction to the subject.
                     </p>
                   </div>
               </article>
@@ -323,8 +327,9 @@
                 </div>
                 <div class="testimonial__body">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. At,
-                         ullam aperiam earum beatae facilis.
+                       Taking the Web Development Fundamentals course has been an incredible journey for me.
+                        As someone with limited coding experience, I was initially hesitant about diving into the
+                        world of web development. However, this course provided the perfect introduction to the subject.
                     </p>
                 </div>
             </article>
@@ -338,8 +343,9 @@
                 </div>
                 <div class="testimonial__body">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. At,
-                         ullam aperiam earum beatae facilis.
+                       Taking the Web Development Fundamentals course has been an incredible journey for me.
+                        As someone with limited coding experience, I was initially hesitant about diving into the
+                        world of web development. However, this course provided the perfect introduction to the subject.
                     </p>
                 </div>
             </article>
@@ -353,8 +359,9 @@
                 </div>
                 <div class="testimonial__body">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. At,
-                         ullam aperiam earum beatae facilis.
+                        Taking the Web Development Fundamentals course has been an incredible journey for me.
+                        As someone with limited coding experience, I was initially hesitant about diving into the
+                        world of web development. However, this course provided the perfect introduction to the subject.
                     </p>
                 </div>
             </article>
@@ -368,8 +375,9 @@
                 </div>
                 <div class="testimonial__body">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. At,
-                         ullam aperiam earum beatae facilis.
+                        Taking the Web Development Fundamentals course has been an incredible journey for me.
+                        As someone with limited coding experience, I was initially hesitant about diving into the
+                        world of web development. However, this course provided the perfect introduction to the subject.
                     </p>
                 </div>
             </article>
@@ -383,7 +391,8 @@
             <div class="footer__1">
                 <a href="index.html" class="footer__logo"><h4>NETwit</h4></a>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, cum?
+                    These platforms provide a digital environment where learners can 
+                    access educational content, courses, and resources over the internet. 
                 </p>
             </div>
             <div class="footer__2">
