--- a/about.html
+++ b/about.html
@@ -47,11 +47,11 @@
             <div class="about__achievements-right">
                 <h1>Achievements</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Neque, alias iste amet suscipit natus dolore quisquam sequi
-                    nisi in, aliquam dignissimos, voluptates vitae officiis porro 
-                    quasi itaque nemo. Ipsa quaerat quod doloremque mollitia culpa velit,
-                    Error porro voluptatem illo sapiente magnam similique.
+                    We provide access to high-quality courses and resources to individuals who might
+                    not have the opportunity to attend traditional universities or colleges.
+                    Our courses have a global reach, breaking down geographical barriers.
+                    Students from different countries and cultures can access the same courses
+                    and engage in collaborative learning experiences.
                 </p>
                 <div class="achievements__cards">
                     <article class="achievement__card">
