--- a/about.html
+++ b/about.html
@@ -270,7 +270,8 @@
                 <div class="footer__1">
                     <a href="index.html" class="footer__logo"><h4>NETwit</h4></a>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, cum?
+                         These platforms provide a digital environment where learners can 
+                    access educational content, courses, and resources over the internet. 
                     </p>
                 </div>
                 <div class="footer__2">
