--- a/courses.html
+++ b/courses.html
@@ -51,7 +51,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -64,7 +65,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -77,7 +79,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -90,7 +93,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -103,7 +107,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -116,7 +121,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -129,7 +135,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -142,7 +149,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -155,7 +163,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices..
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -168,7 +177,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -181,7 +191,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -194,7 +205,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -207,7 +219,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -220,7 +233,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -233,7 +247,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -246,7 +261,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -259,7 +275,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                       Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -272,7 +289,8 @@
                 <div class="course__info">
                   <h4>Fully Responsive Social Media Website UI Design</h4>
                   <p>
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae ad dolorem minus incidunt ipsum.
+                      Designing a fully responsive social media website requires careful consideration of various 
+                      elements to ensure a seamless user experience across different devices.
                   </p>
                   <a href="#" class="btn btn-primary">Learn More</a>   
                 </div>
@@ -291,7 +309,8 @@
                 <div class="footer__1">
                     <a href="index.html" class="footer__logo"><h4>NETwit</h4></a>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, cum?
+                        These platforms provide a digital environment where learners can access 
+                        educational content, courses, and resources over the internet.
                     </p>
                 </div>
                 <div class="footer__2">
