--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,12 @@
                 </div>
                 <h2>Contact Us</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                     Blanditiis, ullam.
+                    Have a question or need assistance? We're here to help! Feel free to reach out to us .
                 </p>
                 <ul class="contact__details">
                     <li>
                         <i class="uil uil-phone-times"></i>
-                        <h5>+234 903 556 8437</h5>
+                        <h5>+234 7063824841</h5>
                     </li>
                     <li>
                         <i class="uil uil-envelope"></i>
@@ -103,7 +102,8 @@
                 <div class="footer__1">
                     <a href="index.html" class="footer__logo"><h4>NETwit</h4></a>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, cum?
+                        These platforms provide a digital environment where learners can access educational content,
+                        courses, and resources over the internet.
                     </p>
                 </div>
                 <div class="footer__2">
