--- a/contact.html
+++ b/contact.html
@@ -126,8 +126,8 @@
                 <div class="footer__4">
                     <h4>Contact Us</h4>
                     <div>
-                        <p>+234 703 556 8437</p>
-                        <p>olahex@gmail.com</p>
+                        <p>+234 7063824841</p>
+                        <p>olabodehezekiah1990@gmail.com</p>
                     </div>
                     <ul class="footer__socials">
                         <li>
