--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@
                     <h4>Contact Us</h4>
                     <div>
                         <p>+234 7063824841</p>
-                        <p>olahex@gmail.com</p>
+                        <p>olabodehezekiah1990@gmail.com</p>
                     </div>
                     <ul class="footer__socials">
                         <li>
