--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                     </li>
                     <li>
                         <i class="uil uil-envelope"></i>
-                        <h5>olahex@gmail.com</h5>
+                        <h5>olabodehezekiah1990@gmail.com</h5>
                     </li>
                     <li>
                         <i class="uil uil-location-point"></i>
